# franka_panda_umi

./: README.md
franka_umi_description/: CMakeLists.txt  README.md  package.xml
franka_umi_description/config/: visualization.rviz
franka_umi_description/launch/: display.launch  display_hand.launch
franka_umi_description/meshes/: hand.STL  left_finger.STL  right_finger.STL
franka_umi_description/robots/: franka_umi_robot.xacro  hand.urdf.xacro  umi_hand.xacro
franka_umi_description/robots/fr3/: fr3.urdf.xacro
franka_umi_description/robots/panda/: panda.urdf.xacro
panda_umi_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
panda_umi_moveit_config/config/: fake_controllers.yaml  franka_hw_sim.yaml  gazebo_panda.urdf  kinematics.yaml  ompl_planning.yaml  panda.srdf  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
panda_umi_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
